--- a/index.html
+++ b/index.html
@@ -698,16 +698,9 @@
         </div>
       </div>
 
-      <footer style="left: 50%; transform: translateX(-38%)">
-        &copy;
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        |porfolio by Furband GBAGUIDI
-      </footer>
+      <site-footer></site-footer>
     </div>
 
-    <script src="nav-bar.js"></script>
-    <script src="profile.js"></script>
+    <script src="components.js"></script>
   </body>
 </html>
